@@ -1,3 +1,10 @@
+Wed Feb 11 17:15:25 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
+	* include/tdsodbc.h src/odbc/descriptor.c src/odbc/odbc.c:
+	- use dynamic string code in attributes
+	- removed some TODO in code
+	* src/tds/tdsstring.c:
+	- do not allocate space for empty string
+
 Wed Feb 11 15:36:34 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
 	* include/tdsodbc.h src/odbc/descriptor.c:
 	* src/odbc/odbc.c src/odbc/odbc_util.c:
